[package]
name = "wring"
version = "0.1.0"
edition = "2021"
description = ""
license = "MIT"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-deque", "crossbeam-queue"] }
io-uring = "0.7.2"
libc = "0.2.80"
parking_lot = "0.12.3"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
tokio = { version = "1.42.0", features = ["full"] }
